# challenge-sherlocks-ai-identify-candidate

./: .gitignore  README.md  package.json  pnpm-lock.yaml  sherlocks-ai-candidate-identify.code-workspace
apps/engine/: .gitignore  README.md  example.env  main.py  package.json  pyproject.toml  ruff.toml
apps/engine/docs/: architecture.md
apps/engine/src/engine/: __init__.py  __main__.py
apps/engine/src/engine/api/: api.py  ws.py
apps/engine/src/engine/core/: belief_engine.py  detection_state.py  event_bus.py  evidence_normalizer.py  feature_cache.py  llm_client.py  output_formatter.py  processor.py  registry.py  scheduler.py  schemas.py  session_engine.py  state_store.py
apps/engine/src/engine/core/identifiers/: base.py  registry.py
apps/engine/src/engine/identifiers/: email_identity.py  host_organizer.py  llm_name_role.py  llm_transcript_role.py  name_match.py  qa_pattern.py  screenshare_heuristic.py  silent_observer.py  speaking_share.py
apps/engine/tests/: test_belief_decay.py  test_detection_state.py  test_llm_identifiers.py  test_output_formatter.py  test_processor_registry.py  test_rule_identifiers.py  test_session_engine.py
apps/simulator/: .gitignore  README.md  main.py  package.json  pyproject.toml
apps/simulator/docs/: SCENARIO_AUTHORING.md  SKILL.md
apps/simulator/scenarios-ref/demo_clean/: index.yml
apps/simulator/src/simulator/: api.py  cli.py  compiler.py  emitter.py  media_gen.py  models.py  validator.py
apps/simulator/tests/: test_api_speed_override.py  test_compiler_cache.py  test_track_id.py  test_validator.py
docs/: engine.md  (+2 more)
(+68 files in other folders)
